# lacrei-saude

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.http  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml  rollback.yml
clinic/: admin.py  apps.py  asaas.py  exceptions.py  models.py  permissions.py  schema.py  serializers.py  urls.py  views.py
clinic/migrations/: 0001_initial.py  0002_patient_appointment_patient.py
clinic/tests/: test_appointments.py  test_auth_and_errors.py  test_payments.py  test_professionals.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: decisions-and-improvements.md
docs/superpowers/plans/: 2026-06-10-medical-appointments-api-implementation.md
docs/superpowers/specs/: 2026-06-10-medical-appointments-api-design.md
infra/terraform/: main.tf  outputs.tf  production.tfvars.example  staging.tfvars.example  variables.tf
